# exec_time

./: .gitignore  .travis.yml  Cargo.toml  README.md
docs/: tasks.md
examples/example-1/: Cargo.toml
examples/example-1/src/: main.rs
examples/example-2/: Cargo.toml
examples/example-2/src/: main.rs
src/: lib.rs
tests/: async.rs  output.rs  sync.rs  tracing.rs  tracing_output.rs
tests/fixtures/impl_stdout/: Cargo.toml
tests/fixtures/impl_stdout/src/: main.rs
tests/fixtures/tracing_backend/: Cargo.toml
tests/fixtures/tracing_backend/src/: main.rs
