[package]
name = "exec_time"
version = "0.1.5"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
rust-version = "1.88"
description = "Print execution time of a function"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["execution_time", "print_time", "measure_time", "time"]
repository = "https://github.com/AbrarNitk/exec_time"


[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.23"
syn = "2.0"
