[package]
name = "exec_time"
version = "0.1.7"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
rust-version = "1.88"
description = "Attribute macro for timing sync and async Rust functions with labels, units, and slow-call thresholds"
license = "MIT"
homepage = "https://github.com/AbrarNitk/exec_time"
documentation = "https://docs.rs/exec_time"
include = ["src/**/*", "README.md", "LICENSE", "Cargo.toml"]
readme = "README.md"
categories = ["development-tools::debugging", "development-tools::procedural-macro-helpers"]
keywords = ["timing", "profiling", "proc-macro", "logging", "tracing"]
repository = "https://github.com/AbrarNitk/exec_time"

[features]
default = []
tracing = []

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.23"
syn = "2.0"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }
